--- a/chapterAPPX_EMIS_2019.tex
+++ b/chapterAPPX_EMIS_2019.tex
@@ -16,7 +16,7 @@ These are the emissions that are used as basis
  source-receptor calculations are presented in Appendix~\ref{ch:appx_sr2019}.\\
 
 The land-based emissions for 2019 have been derived from the 2021
-official data submissions to UNECE CLRTAP \old{Update reference later \citep{CEIP2021}}.
+official data submissions to UNECE CLRTAP  \citep{CEIP2021}.
 
 
 This year two different estimates for primary PM emissions have been available for the modeling: 1) EMEP emissions as prepared by CEIP based on the official data submissions for 2019, and 2) EMEP PM emissions where condensable organics from small-scale combustion are accounted for by using expert emission estimates for GNFR sector C from the TNO REF2.1 data set for the following countries: Albania, Austria, Bosnia and Herzegovina, Belarus, Switzerland, Cyprus, Germany, Estonia, France,  Ireland, Lithuania, Montenegro, Poland, Russian Federation, Slovakia, Turkey and Ukraine.
