Update on Overleaf.

--- a/EMEP_Reports.bib
+++ b/EMEP_Reports.bib
@@ -3512,3 +3512,22 @@ and the Working Group on Effects},
   number = {ECE/EB.AIR/GE.1/2020/9},
   url = {https://www.unece.org/fileadmin/DAM/env/documents/2020/AIR/EMEP_WGE_Joint_Session/ECE_EB.AIR_GE.1_2020_9-2009233E.pdf}
 }
+
+@INCOLLECTION{R2020:SVOC,
+  author = {Faherli, H. and Simpson, D. and Wind, P. and Tsyro, S. and Ny{\'i}ri, {\'A.} and Klein, H.},
+  title = {Condensable organics; model evaluation and source receptor matrices for 2018},
+  booktitle = {Transboundary particulate matter, photo-oxidants, acidifying and eutrophying components. EMEP Status Report 1/2020},
+  pages={83-97},
+  publisher = metno,
+  year = {2020}
+}
+
+@INCOLLECTION{R2020:CAMSREF2,
+  author = {Denier van der Gon, H. and Kuenen, J.P. and Visschedijk, A.J.H.},
+  title = {The TNO CAMS inventories, and alternative (Ref2)
+emissions for residential wood combustion},
+  booktitle = {Transboundary particulate matter, photo-oxidants, acidifying and eutrophying components. EMEP Status Report 1/2020},
+  pages={77-82},
+  publisher = metno,
+  year = {2020}
+}
