Update on Overleaf.

--- a/EMEP_Reports.bib
+++ b/EMEP_Reports.bib
@@ -3514,7 +3514,7 @@ and the Working Group on Effects},
 }
 
 @INCOLLECTION{R2020:SVOC,
-  author = {Faherli, H. and Simpson, D. and Wind, P. and Tsyro, S. and Ny{\'i}ri, {\'A.} and Klein, H.},
+  author = {Faherli, H. and Simpson, D. and Wind, P. and Tsyro, S. and Ny{\'i}ri, {\'A}. and Klein, H.},
   title = {Condensable organics; model evaluation and source receptor matrices for 2018},
   booktitle = {Transboundary particulate matter, photo-oxidants, acidifying and eutrophying components. EMEP Status Report 1/2020},
   pages={83-97},
