Update on Overleaf.

--- a/chapterAPPX_EMIS_2019.tex
+++ b/chapterAPPX_EMIS_2019.tex
@@ -23,7 +23,7 @@ This year two different estimates for primary PM emissions have been available f
   %For more details please consult Chapter~\ref{ch:Condensables}.
 In this report 1) is referred to as EMEP and 2) is referred to as EMEPwREF2.1C. National emission totals for both data sets are shown in Table~\ref{tab:2019emisPM}.  \\
 
-Emissions from international shipping occurring in different European seas within the EMEP domain are not reported to UNECE CLRTAP, but derived from other sources. This year's update uses the CAMS global shipping emissions \old{New reference? \citep{CAMSemis2019}}  developed by FMI (Finnish Meteorological Institute).
+Emissions from international shipping occurring in different European seas within the EMEP domain are not reported to UNECE CLRTAP, but derived from other sources. This year's update uses the CAMS global shipping emissions \citep{CAMSemis2019}  developed by FMI (Finnish Meteorological Institute).
 \\
 
 Natural marine emissions of dimethyl sulphid (DMS) are calculated dynamically during the model run and vary with current meteorological conditions.\\
