--- a/chapterAPPX_EMIS_2019.tex
+++ b/chapterAPPX_EMIS_2019.tex
@@ -136,7 +136,7 @@ Note that emissions in this appendix are given in different units than used else
 \begin{tabular}{|l|r|r|r|r||r|r|r|}
 \hline
  Area/Pollutant& BC&PM$_{2.5}$&PM$_{co}$&PM$_{10}$&PM$_{2.5}$&PM$_{co}$&PM$_{10}$\\
- &&EMEP&EMEP&EMEP&EMEPwREF2.1C&EMEPwREF2.1C&EMEPwREF2.1C\\\hline\hline
+ &&{\tiny EMEP}&{\tiny EMEP}&{\tiny EMEP}&{\tiny EMEPwREf2.1C}&{\tiny EMEPwREf2.1C}&{\tiny EMEPwREf2.1C}\\\hline\hline
                        Albania&     2&    13&     3&    15&    12&     2&    14 \\\hline
                        Armenia&     1&     8&     2&    10&     8&     2&    10 \\\hline
                        Austria&     4&    14&    12&    26&    34&    12&    46 \\\hline
