Update on Overleaf.

--- a/RefStatusPM.bib
+++ b/RefStatusPM.bib
@@ -1,3 +1,12 @@
+@TECHREPORT{CAMS2020,
+  author = {Tarrason, L. and Hamer, P. and Meleux, F. and Colette, A. and Rouil, L.},
+  title = {Interim Annual Assessment Report for 2019. European air quality in 2019},
+  year = {2020},
+  ref = {CAMS71\_2020\_IAR2019},
+  issued = {NILU\/Leonor TARRASON},
+  url = {https://policy.atmosphere.copernicus.eu/reports/CAMS71_IAR_2019_final.pdf},
+}
+
 @TECHREPORT{CAMS2019,
   author = {Tarrason, L. and Hamer, P. and Guerreiro, C. and Meleux, F. and Rouil, L.},
   title = {Interim Annual Assessment Report for 2018. European air quality in 2018},
