--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -7,19 +7,26 @@
 
 \section{\label{sec:Trends_introduction}Introduction and background}
 
-Colocation: To be written
+Both observation and model trends were processed with the pyaerocom software (\url{https://github.com/metno/pyaerocom}, version XXX) for the following periods: 2000-2019, 2000-2010, 2010-2019, and 2005-2019. All observations were provided via the EBAS database. 
 
-The same methodology as described by \cite{aas2019global, mortier2020} has been used to derive the trends at the individual stations. The significance of the trends is tested with the Mann-Kendall test \citep{hamed1998modified}. The related p-value is used to determine if the trend is significant or not within a confidence interval of 95\%. The slope is calculated with the Theil-Sen estimator which is less sensitive to outliers than standard least-squares methods \citep{sen1968estimates}. At least least 7 valid yearly averages (50\% of time coverage) are required per station for allowing the computation of a slope.
+In order to compute trends, for each station and variable, time series data was merged in time to cover the respective time period for the trends.
+Since the provided temporal resolution can change over time for a given site, the lowest common resolution was identified and higher resolution data were down-sampled to that resolution during the merging process. For temporal resampling, a conservative scheme was used requiring ca 75\% coverage in a hierarchical manner, that is, at least 18 hourly measurement values to retrieve a daily mean, and at least 22 daily values to retrieve a monthly mean. Trends are computed based on yearly averages, as described in more details below. To retrieve the yearly averages, at least one monthly value is required per season. In addition to trends based on yearly averages, seasonal trends are computed as well for all variables but O$_{3}$ which is focusing on the summer maximum using percentiles (details below). In addition to this conservative resampling scheme, a second analysis was done using 25\% coverage constraint instead of 75\% coverage. Finally, a minimum number of yearly averages was required to be available for the trends computation depending on the length of the period, corresponding to ca 75\% (e.g. 14 yearly values for the period 2000-2019).
+
+For O$_3$, the resampling was done differently, that is, daily max values were computed based on hourly measurements, requiring at least 18 hourly measurements per day as for the other variables. Then, the yearly average was computed using different percentiles of the daily values (10, 50, 75, 95, 98, 99 percentiles), requiring at least 330 daily max values in a given year. Trends were then computed for each of these percentile averages.
+
+To compute the model trends, the model output for each variable was colocated in space and time with the observations and where observations are missing, the model output was invalidated before computing the trends. The monthly time series of the colocated model and observation data was output as csv files for each individual site. These data including relevant station metadata and trends results are available in a github repository (\url{https://github.com/metno/emep_trends_2021}), including the scripts used for the processing of the trends.
+
+The same methodology as described by \cite{aas2019global, mortier2020} has been used to derive the trends at the individual stations. The significance of the trends is tested with the Mann-Kendall test \citep{hamed1998modified}. The related p-value is used to determine if the trend is significant or not within a confidence interval of 95\%. The slope is calculated with the Theil-Sen estimator which is less sensitive to outliers than standard least-squares methods \citep{sen1968estimates}. At least least x valid yearly averages (xx\% of time coverage) are required per station for allowing the computation of a slope.
 
 An uncertainty is provided for each trend by combining the error of the slope calculation itself to the error of the residuals:
 
 \begin{equation}
- Uncertainty = \sqrt{{\left (\frac{\Delta m}{y(2000)}\right )}^{2} + {\left ( \frac{m \cdot \Delta r}{y(2000)^2}\right )}^{2} }
+ Uncertainty = \sqrt{{\left (\frac{\Delta m}{y(start)}\right )}^{2} + {\left ( \frac{m \cdot \Delta r}{y(start)^2}\right )}^{2} }
 \end{equation}
 
-where $\Delta m$ is the Theil-Sen estimator 95\% confidence interval, $y(2000)$ is the value of the regression line at the year 2000, $m$ is the value of the Theil-Sen slope and $\Delta r$ is the averaged error on the residuals computed based on the difference between the linear trend and the yearly mean values of the regional time series.
+where $\Delta m$ is the Theil-Sen estimator 95\% confidence interval, $y(start)$ is the value of the regression line at the first year of the period, $m$ is the value of the Theil-Sen slope and $\Delta r$ is the averaged error on the residuals computed based on the difference between the linear trend and the yearly mean values of the regional time series.
 
-In order to allow for consistent comparisons, the trend is provided as a relative trend (\%/yr) with respect to the first year of the time period (2000).
+In order to allow for consistent comparisons, the trend is provided as a relative trend (\%/yr) with respect to the first year of the time period.
 
 \clearpage
 \bibliographystyle{copernicus}         % change bibliography-name after each
