--- a/report.tex
+++ b/report.tex
@@ -321,7 +321,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterStatus2019}
+\includeonly{chapterStatus2019}
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
 
 \begin{document}
@@ -352,7 +352,7 @@
 
 \part{Research Activities (or should we rather call it Trends in air pollution)} 
 
-%\include{chapterTrendsSandN} %Wenche, Hilde, Svetlana (Jonas/Augustin about how the trends have been calculated)
+\include{chapterTrendsSandN} %Wenche, Hilde, Svetlana (Jonas/Augustin about how the trends have been calculated)
 %\include{chapterTrendsOzone} %Sverre, David, Joffen
 %\include{chapterTrendsOCandSIA} %Karl-Espen, David
 
@@ -375,7 +375,6 @@
 \include{chapterAPPX_SR_2019}
 %\include{chapterAPPX_CountryRep}
 %\include{chapterAPPX_ModelEval}
-
 
 \end{appendix}
 \end{document}
